fixed box overflow issue

--- a/whirlwind.css
+++ b/whirlwind.css
@@ -118,7 +118,6 @@ src::after {
   content: ")";
 }
 
-
 proof::before {
   content: 'Proof. ';
   font-style: italic;
@@ -126,13 +125,20 @@ proof::before {
 
 proof {
   padding-top: 5px;
-  padding-bottom: 10px;
+  margin-bottom: 36px;
+  display: inline-block; /* Display as inline-block to allow inline positioning */
+  position: relative; /* Position relative for absolute positioning */
 }
 
 proof::after {
-  float: right;
+  position: absolute;
+  top: 100%;
+  right: 0;
   content: '◾';
   font-size: 15px;
+  /* Adjust these values */
+  margin-bottom: 0; /* Try setting margin-bottom to 0 */
+  padding-bottom: 0; /* Try setting padding-bottom to 0 */
 }
 
 proof p {
